# pbi_pyadomd

./: .gitignore  404.html  README.md  deploy.py  index.html  objects.inv  pyproject.toml
api/Connection/: index.html
api/Reader/: index.html
docs/: mkdocs.yml
docs/source/: conf.py  index.rst
pbi_pyadomd/: __init__.py  __init__.pyi  conn.py  cursor.py  pyadomd.py  reader.py  utils.py
pbi_pyadomd/Microsoft/AnalysisServices/: AdomdClient.pyi
pyadomd/: __init__.py  __init__.pyi  c_sharp_type_mapping.py  pyadomd.py
pyadomd/Microsoft/AnalysisServices/: AdomdClient.pyi
search/: search_index.json
